# accelerated-data-engineering

./: .gitignore  README.md
docs/: performance.md  references.md  tools.md
examples/compression/: CMakeLists.txt  README.md  compression.cpp
examples/database/: CMakeLists.txt  README.md  database.cpp  database_engine.cpp  database_engine.h  query_parser.cpp  query_parser.h  table.cpp  table.h  test_db.sh
examples/etl_pipeline/: CMakeLists.txt  README.md  main.cpp
examples/etl_pipeline/loaders/: file_writer.cpp  file_writer.h
examples/etl_pipeline/processors/: data_transformer.cpp  data_transformer.h
examples/etl_pipeline/sources/: api_client.cpp  api_client.h  s3_client.cpp  s3_client.h  s3_client_simple.cpp  s3_client_simple.h  sftp_client.cpp  sftp_client.h  sftp_client_simple.cpp  sftp_client_simple.h  web_scraper.cpp  web_scraper.h
